# Physical-AI-Humanoid

./: CLAUDE.md
.claude/: Untitled-1.md  settings.local.json
.claude/skills/rag-backend/: SKILL.md
.github/workflows/: deploy.yaml
.specify/memory/: constitution.md
backend/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/src/controllers/: agent_handler.py  embeddings_controller.py
backend/src/lib/: agent_instructions.py  chunker.py  configs.py  google_embedding.py  openaiagentsdk_config.py  vectordb_connection.py
backend/src/routers/: embeddings_router.py  query_router.py
docs/: .eslintrc.js  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: accessibility.md  intro.md
docs/docs/development-documentation/: _category_.json  accessibility-guide.md  codebase-overview.md  deployment-production.md  final-summary.md  performance-optimization.md  testing-quality-assurance.md
docs/docs/projects/: _category_.json  assessment-evaluation.md  capstone-autonomous-humanoid.md  capstone-autonomous-humanoid.md.tmp  gazebo-simulation-impl.md  isaac-perception-pipeline.md  ros2-package-dev.md  test-workflow.md
docs/docs/week-01-02-introduction/: _category_.json  foundations-of-physical-ai.md  (+2 more)
specs/001-create-retrieval-augmented/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-physical-ai-textbook/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-chatbot-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+84 files in other folders)
